--- a/MDK-ARM/SDK52-P-NUCLEO-TBMT-sensor.uvprojx
+++ b/MDK-ARM/SDK52-P-NUCLEO-TBMT-sensor.uvprojx
@@ -335,7 +335,7 @@
               <MiscControls></MiscControls>
               <Define>ARM_MATH_CM4,USE_HAL_DRIVER,STM32F302x8</Define>
               <Undefine></Undefine>
-              <IncludePath>../Inc;../Drivers/STM32F3xx_HAL_Driver/Inc;../Drivers/STM32F3xx_HAL_Driver/Inc/Legacy;../Drivers/CMSIS/Device/ST/STM32F3xx/Include;../Drivers/CMSIS/Include;../MCSDK_v5.2.0-Full/MotorControl/MCSDK/MCLib/Any/Inc;../MCSDK_v5.2.0-Full/MotorControl/MCSDK/MCLib/F3xx/Inc;../MCSDK_v5.2.0-Full/MotorControl/MCSDK/UILibrary/Inc;../MCSDK_v5.2.0-Full/MotorControl/MCSDK/SystemDriveParams;..\Src\EXTREME3D</IncludePath>
+              <IncludePath>../Inc; ../Drivers/STM32F3xx_HAL_Driver/Inc; ../Drivers/STM32F3xx_HAL_Driver/Inc/Legacy; ../Drivers/CMSIS/Device/ST/STM32F3xx/Include; ../Drivers/CMSIS/Include; ../MCSDK_v5.2.0-Full/MotorControl/MCSDK/MCLib/Any/Inc; ../MCSDK_v5.2.0-Full/MotorControl/MCSDK/MCLib/F3xx/Inc; ../MCSDK_v5.2.0-Full/MotorControl/MCSDK/UILibrary/Inc; ../MCSDK_v5.2.0-Full/MotorControl/MCSDK/SystemDriveParams; ..\Src\EXTREME3D</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -389,6 +389,16 @@
         <Group>
           <GroupName>Application/User</GroupName>
           <Files>
+            <File>
+              <FileName>usart.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\usart.c</FilePath>
+            </File>
+            <File>
+              <FileName>extreme3d.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Src\EXTREME3D\extreme3d.c</FilePath>
+            </File>
             <File>
               <FileName>main.c</FileName>
               <FileType>1</FileType>
@@ -453,16 +463,6 @@
               <FileName>stm32f3xx_hal_msp.c</FileName>
               <FileType>1</FileType>
               <FilePath>../Src/stm32f3xx_hal_msp.c</FilePath>
-            </File>
-            <File>
-              <FileName>usart.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Src\usart.c</FilePath>
-            </File>
-            <File>
-              <FileName>extreme3d.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\Src\EXTREME3D\extreme3d.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -543,6 +543,11 @@
               <FileName>stm32f3xx_hal_exti.c</FileName>
               <FileType>1</FileType>
               <FilePath>../Drivers/STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_exti.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32f3xx_hal_can.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>../Drivers/STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_can.c</FilePath>
             </File>
             <File>
               <FileName>stm32f3xx_hal_dac.c</FileName>
