--- a/MDK-ARM/SDK52-P-NUCLEO-TBMT-sensor.uvprojx
+++ b/MDK-ARM/SDK52-P-NUCLEO-TBMT-sensor.uvprojx
@@ -10,7 +10,8 @@
       <TargetName>SDK52-P-NUCLEO-TBMT-sensor</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>5060300::V5.06 update 3 (build 300)::ARMCC</pCCUsed>
+      <pCCUsed>5060528::V5.06 update 5 (build 528)::ARMCC</pCCUsed>
+      <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
           <Device>STM32F302R8Tx</Device>
